--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,6 +1,6 @@
 #sidebar None
 ==  * [Instructions Condor-Copasi]==
-    * ===[Instructions#Introduction Introduction]===
+===   *[Instructions#Introduction Introduction]===
     * ===[Instructions#Usage Usage]===
       * ====[Instructions#Log_In Getting started]====
       * ====[Instructions#Submit_new_jobs Submitting new jobs]====
