Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,7 +1,7 @@
 #sidebar None
 ==  * [Instructions Condor-Copasi]==
-===   *[Instructions#Introduction Introduction]===
-    * ===[Instructions#Usage Usage]===
+    * [Instructions#Introduction Introduction]
+    * [Instructions#Usage Usage]
       * ====[Instructions#Log_In Getting started]====
       * ====[Instructions#Submit_new_jobs Submitting new jobs]====
       * ====[Instructions#Monitor_the_status_of_existing_jobs Monitor running jobs]====
