Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -12,4 +12,5 @@
       * [TaskTypes#Optimization_Repeat Optimization Repeat]
       * [TaskTypes#Parameter_Estimation_Repeat Parameter Estimation Repeat]
       * [TaskTypes#Optimization_Repeat_with_Different_Alogorithms Optimization Repeat with Different Alogorithms]
-    * Troubleshooting
+    * [Troubleshooting Troubleshooting]
+    * [Deployment Deployment]
