--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -8,6 +8,7 @@
       * [Instructions#Process_job_output Process job output]
     * [TaskTypes Task Types]
       * [TaskTypes#Global_Sensitivity_Analysis_/_Sensitivity_Optimization Global Sensitivity Analysis / Sensitivity Optimization]
+      * [TaskTypes#Stochastic_Simulation Stochastic Simulation]
       * [TaskTypes#Parallel_Scan Parallel Scan]
       * [TaskTypes#Optimization_Repeat Optimization Repeat]
       * [TaskTypes#Parameter_Estimation_Repeat Parameter Estimation Repeat]
