--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -50,5 +50,27 @@ The status of jobs on the system is refreshed approximately every two minutes.
 
 ===Running Jobs===
 Jobs submitted will have a status as one of the following:
-  * Submitted to condor - 
-  * Running blah
+
+|| *Status* || *Description*||
+|| *New, waiting for Condor submission* || The job was successfully uploaded to Condor-Copasi, and is awaiting submission to the Condor pool ||
+|| *Submitted to Condor* || The job was successfully parallelized and a number of Condor jobs were submitted to the pool. The status of these Condor jobs can be viewed by clicking on the job name ||
+|| *Finished, processing data on Condor* || Currently only used for the Stochastic Simulation task. All simulations have completed, and the output data is being processed. This step can be computationally intensive, and so is being run on the Condor pool as a single Condor job.||
+|| *Finished, processing data locally* || All simulations/optimizations have completed, and the results are being processed on the server ||
+
+The status of individual jobs running on the Condor pool is displayed on the Job Details page as *Condor Status*. The status of individual Condor jobs will either be:
+ * *Idle* -- in a queue, waiting to be executed
+ * *Running* -- being executed on a remote machine
+ * *Held* -- an error occurred while trying to run the job on a remote machine
+ * *Finished* -- the Condor job successfully finished running on a remote machine
+
+===Completed Jobs===
+If a job has successfully completed, it will be listed under 'Completed Jobs'. Depending on the type of task performed, the results can be viewed in the browser, or downloaded as a tab-separated text file.
+
+The directory containing all automatically generated files, and output files can also be downloaded. For details on what the various files are, see the [Troubleshooting#Understanding_the_automatically_generated_files Troubleshooting] Wiki page.
+
+The output of the Stochastic Simulation task -- particle number means, and optionally, shaded areas showing the standard deviations -- can be plotted in the browser, and the plot images downloaded in various file formats. These plots are generated using Python's matplotlib library.
+
+===Failed Jobs===
+If an error occurs, either automatically generating the files to submit to Condor, or while running a job on Condor, the job will be marked as *Error*, and listed under 'Errors'. To view more details about the error, click the job name for more information.
+
+See the [Troubleshooting Troubleshooting] Wiki page for more details about diagnosing and fixing errors.
