--- a/wiki/Deployment.wiki
+++ b/wiki/Deployment.wiki
@@ -1,6 +1,8 @@
 #summary Information for system administrators on deploying Condor-Copasi
 #labels Phase-Deploy,Featured
 
+*This page is intended to provide information for those wishing to install Condor-Copasi on their own server. For information on using the Condor-Copasi web interface, see the [Instructions Instruction Manual] Wiki page.*
+
 The Condor Copasi Web Frontend is written in Python as a [http://docs.djangoproject.com/en/1.2/releases/1.2.4/ Django 1.2 Application]. In addition to the web frontend, a background daemon must be configured. This daemon periodically checks for new jobs to submit to condor, and checks on the status of jobs that have already been submitted.
 
 =General setup=
